--- a/food-delivery/src/components/Header/Header.scss
+++ b/food-delivery/src/components/Header/Header.scss
@@ -1,26 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
+@import "../../sass/main.scss";
+
 body {
   width: 100vw;
   height: 100vh;
 }
 
 header {
+  @include flexCenter();
   width: 100%;
   height: 70px;
   position: fixed;
-  display: flex;
-  align-items: center;
   justify-content: space-between;
   background-color: transparent;
   padding: 10px;
 }
 
 .brand {
+  @include flexCenter();
+
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .logo {
@@ -45,5 +45,5 @@ h1 {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: 50% 50%;
+  object-position: 50% 60%;
 }
