--- a/food-delivery/src/components/Menu/MealList/Meal.scss
+++ b/food-delivery/src/components/Menu/MealList/Meal.scss
@@ -1,15 +1,16 @@
+@import "../../sass/main.scss";
+
 article {
-  height: 20vh;
-  width: 50vw;
+  @include flexCenter();
+  height: 25vh;
+  width: 60vw;
+  max-width: 700px;
+  min-width: 350px;
   position: relative;
-  max-width: 800px;
-  min-width: 360px;
-  display: flex;
-  align-items: center;
-  background-color: #f5f4f3;
   justify-content: space-between;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  background-color: #f5f4f3;
   border-radius: 10px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   margin: 20px auto;
   overflow: hidden;
   transition: transform 0.3s;
@@ -43,7 +44,7 @@ article img {
   width: 100%;
   height: 100%;
   cursor: pointer;
-  background-color: #dddbd7;
+  background-color: $primaryColor;
   justify-self: top;
   border: none;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
@@ -56,6 +57,6 @@ article img {
 }
 
 .meal section button:hover {
-  background-color: #dddbd7;
+  background-color: $primaryColor;
   opacity: 0.8;
 }
