--- a/food-delivery/src/components/Menu/MealsMenu.scss
+++ b/food-delivery/src/components/Menu/MealsMenu.scss
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
+@import "../../sass/main.scss";
+
 h2 {
   font-family: "Bebas Neue", cursive;
   text-transform: uppercase;
