--- a/food-delivery/src/components/Menu/MealsMenu.scss
+++ b/food-delivery/src/components/Menu/MealsMenu.scss
@@ -3,8 +3,10 @@
 @import "../../sass/main.scss";
 
 h2 {
+  padding: 50px;
   font-family: "Bebas Neue", cursive;
   text-transform: uppercase;
   font-weight: 900;
   font-size: 3.25rem;
+  text-align: center;
 }
