--- a/food-delivery/src/sass/_mixins.scss
+++ b/food-delivery/src/sass/_mixins.scss
@@ -1,5 +1,6 @@
-@mixin flexCenter {
+@mixin flexCenter($direction) {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: $direction;
 }
