--- a/food-delivery/src/components/Menu/MealList/Meal.scss
+++ b/food-delivery/src/components/Menu/MealList/Meal.scss
@@ -1,62 +1,84 @@
 @import "../../../sass/main.scss";
 
-article {
-  @include flexCenter();
-  height: 25vh;
-  width: 60vw;
-  max-width: 700px;
-  min-width: 350px;
+.meal {
+  @include flexCenter(row);
+  width: 45vw;
+  height: 20vh;
+  max-width: 500px;
   position: relative;
   justify-content: space-between;
   background-color: #f5f4f3;
   border-radius: 10px;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-  margin: 20px auto;
   overflow: hidden;
+  margin: 0 auto;
   transition: transform 0.3s;
+
+  &:nth-child(even) {
+    flex-direction: row-reverse;
+  }
+
+  &:hover {
+    transform: scale(1.05);
+  }
+
+  img {
+    width: 35%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .meal-info {
+    @include flexCenter(column);
+    padding: 25px;
+    gap: 10px;
+    text-align: center;
+  }
+
+  section {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+
+    button {
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      background-color: $primaryColor;
+      justify-self: top;
+      border: none;
+      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+      font-weight: bold;
+      font-size: 1.75rem;
+      text-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+      opacity: 0;
+      transition: opacity 1s;
+      text-transform: uppercase;
+
+      &:hover {
+        background-color: $primaryColor;
+        opacity: 0.7;
+      }
+    }
+  }
 }
 
-article:nth-child(even) {
-  flex-direction: row-reverse;
-}
+@media screen and (max-width: 900px) {
+  .meal {
+    @include flexCenter(column);
+    width: 80%;
+    height: fit-content;
+    justify-content: space-between;
 
-article:hover {
-  transform: scale(1.02);
-}
+    &:nth-child(even) {
+      @include flexCenter(column);
+      justify-content: space-between;
+    }
 
-article img {
-  height: 100%;
-  width: 35%;
-  object-fit: cover;
-}
-
-.meal div {
-  padding: 30px;
-}
-
-.meal section {
-  width: 35%;
-  height: 100%;
-  position: absolute;
-}
-
-.meal section button {
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  background-color: $primaryColor;
-  justify-self: top;
-  border: none;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
-  font-weight: bold;
-  font-size: 1.75rem;
-  text-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-  opacity: 0;
-  transition: opacity 1s;
-  text-transform: uppercase;
-}
-
-.meal section button:hover {
-  background-color: $primaryColor;
-  opacity: 0.8;
+    img {
+      height: 125px;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
 }
