--- a/food-delivery/src/components/Menu/MealList/MealsList.scss
+++ b/food-delivery/src/components/Menu/MealList/MealsList.scss
@@ -1,1 +1,11 @@
 @import "../../../sass/main.scss";
+
+.meals-list {
+  width: 100vw;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  padding: 20px;
+}
