--- a/food-delivery/src/components/Header/Header.scss
+++ b/food-delivery/src/components/Header/Header.scss
@@ -13,15 +13,18 @@ header {
   height: 70px;
   position: fixed;
   justify-content: space-between;
-  background-color: transparent;
+  background-color: white;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.3);
   padding: 10px;
+  z-index: 99;
 
   .brand {
     @include flexCenter(row);
     height: 100%;
 
     .logo {
-      height: 100%;
+      width: 50px;
+      height: 50px;
       margin-right: 10px;
     }
 
