--- a/food-delivery/src/components/Menu/MealList/Meal.scss
+++ b/food-delivery/src/components/Menu/MealList/Meal.scss
@@ -2,20 +2,22 @@
 
 .meal {
   @include flexCenter(row);
-  width: 45vw;
-  height: 20vh;
-  max-width: 500px;
+  width: calc(50% - 25px);
+  height: 25vh;
   position: relative;
   justify-content: space-between;
   background-color: #f5f4f3;
   border-radius: 10px;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   overflow: hidden;
-  margin: 0 auto;
   transition: transform 0.3s;
 
   &:nth-child(even) {
     flex-direction: row-reverse;
+
+    .add-to-cart {
+      left: 0;
+    }
   }
 
   &:hover {
@@ -30,34 +32,66 @@
 
   .meal-info {
     @include flexCenter(column);
-    padding: 25px;
+    height: 100%;
+    position: relative;
+    padding: 25px 50px;
     gap: 10px;
     text-align: center;
   }
 
-  section {
-    width: 100%;
-    height: 100%;
+  .add-to-cart {
+    width: 35px;
+    height: 35px;
     position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 10px;
+    transition: all 0.5s;
+
+    &:hover {
+      width: 120px;
+
+      button span {
+        width: 85px;
+      }
+    }
 
     button {
+      @include flexCenter(row);
       width: 100%;
       height: 100%;
       cursor: pointer;
-      background-color: $primaryColor;
-      justify-self: top;
+      background-color: white;
       border: none;
+      border-radius: 25px;
       box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
       font-weight: bold;
-      font-size: 1.75rem;
+      font-size: 1rem;
       text-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-      opacity: 0;
-      transition: opacity 1s;
+      transition: all 1s;
       text-transform: uppercase;
 
       &:hover {
         background-color: $primaryColor;
-        opacity: 0.7;
+      }
+
+      img {
+        width: 20px;
+        height: 20px;
+      }
+
+      span {
+        width: 0px;
+        white-space: nowrap;
+        text-overflow: clip;
+        display: block;
+        overflow: hidden;
+        font-size: 0.75rem;
+        transition: all 0.5s;
+
+        &::before {
+          content: "\00a0\00a0";
+        }
       }
     }
   }
@@ -66,7 +100,7 @@
 @media screen and (max-width: 900px) {
   .meal {
     @include flexCenter(column);
-    width: 80%;
+    width: 80vw;
     height: fit-content;
     justify-content: space-between;
 
@@ -79,6 +113,20 @@
       height: 125px;
       width: 100%;
       object-fit: cover;
+    }
+
+    .meal-info {
+      padding: 10px 40px;
+    }
+
+    .add-to-cart {
+      margin: 10px auto 0 auto;
+      position: static;
+      width: 120px;
+
+      button span {
+        width: 85px;
+      }
     }
   }
 }
