--- a/food-delivery/src/components/Menu/MealList/MealsList.scss
+++ b/food-delivery/src/components/Menu/MealList/MealsList.scss
@@ -1,11 +1,10 @@
 @import "../../../sass/main.scss";
 
 .meals-list {
-  width: 100vw;
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
+  @include flexCenter(row);
   flex-wrap: wrap;
+  max-width: 1200px;
   gap: 50px;
-  padding: 20px;
+  margin: 0 auto;
+  padding-bottom: 50px;
 }
