--- a/food-delivery/src/sass/_mixins.scss
+++ b/food-delivery/src/sass/_mixins.scss
@@ -4,3 +4,19 @@
   justify-content: center;
   flex-direction: $direction;
 }
+
+/* @mixin fontSize($type) {
+  @if $type == "title" {
+    font-size: 1.5rem;
+
+    @media screen and (min-width: 700px) {
+      font-size: 1rem;
+    }
+  }
+  @if $type == "subtitle" {
+    font-size: 1rem;
+  }
+  @if $type == "description" {
+    font-size: 0.75rem;
+  }
+} */
