--- a/food-delivery/src/components/Menu/MealsMenu.scss
+++ b/food-delivery/src/components/Menu/MealsMenu.scss
@@ -33,6 +33,14 @@ h2 {
   white-space: nowrap;
 }
 
+.error {
+  text-align: center;
+  padding: 20px;
+  font-size: 1.25rem;
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+  font-style: italic;
+}
+
 @media screen and (max-width: 900px) {
   .meals-menu-header {
     @include flexCenter(column !important);
