--- a/food-delivery/src/components/Menu/MealList/MealsList.scss
+++ b/food-delivery/src/components/Menu/MealList/MealsList.scss
@@ -1,10 +1,13 @@
 @import "../../../sass/main.scss";
 
-.meals-list {
+.hidden {
+  display: none;
+}
+
+.meals-list .data-container {
   @include flexCenter(row);
   flex-wrap: wrap;
   max-width: 1200px;
   gap: 50px;
   margin: 0 auto;
-  padding-bottom: 50px;
 }
