--- a/food-delivery/src/components/Menu/Pagination/Pagination.scss
+++ b/food-delivery/src/components/Menu/Pagination/Pagination.scss
@@ -3,9 +3,10 @@
 .pagination {
   @include flexCenter(row);
   gap: 15px;
+  padding: 50px;
 }
 
-.paginationItem {
+.pagination-item {
   width: 15px;
   height: 25px;
   background: #fff;
@@ -14,7 +15,7 @@
   border: none;
 }
 
-.paginationItem span {
+.pagination-item span {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -34,10 +35,14 @@
   cursor: pointer;
 }
 
-.paginationItem.active {
+.pagination-item.active {
   border-bottom: 2px solid black;
   margin-bottom: -2px;
   pointer-events: none;
+}
+
+.pagination-item.hidden {
+  display: none;
 }
 
 .prev.disabled,
