Meal Details Updated

--- a/food-delivery/src/components/Menu/MealList/Meal.scss
+++ b/food-delivery/src/components/Menu/MealList/Meal.scss
@@ -10,7 +10,7 @@
   justify-content: space-between;
   background-color: #f5f4f3;
   border-radius: 10px;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   transition: transform 0.3s;
 
@@ -39,6 +39,10 @@
     padding: 25px 50px;
     gap: 10px;
     text-align: center;
+
+    h3 {
+      color: $titleColor;
+    }
 
     .meal-description {
       // Limit to paragraph length
