--- a/food-delivery/src/components/Menu/Search/Search.scss
+++ b/food-delivery/src/components/Menu/Search/Search.scss
@@ -1,6 +1,6 @@
 @import "../../../sass/main.scss";
 
-input {
+.search-input {
   background-color: $secondaryColor;
   padding: 10px 15px;
   border: none;
