--- a/food-delivery/src/components/Header/CartButton.scss
+++ b/food-delivery/src/components/Header/CartButton.scss
@@ -2,15 +2,15 @@
 
 .cart-button {
   @include flexCenter(row);
-  height: 100%;
+  height: 40px;
   border-radius: 25px;
   color: black;
   cursor: pointer;
   background-color: white;
   border: none;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.3);
   font-weight: bold;
-  padding: 1rem 1.25rem;
+  padding: 1rem;
 
   &:hover {
     background-color: $primaryColor;
@@ -21,7 +21,7 @@
   }
 
   .cart-icon {
-    width: 1.25rem;
+    width: 1.1rem;
     margin-right: 0.5rem;
   }
 
@@ -30,6 +30,6 @@
     border-radius: 25px;
     font-weight: bold;
     margin-left: 0.75rem;
-    padding: 0.15rem 0.65rem;
+    padding: 0.15rem 0.5rem;
   }
 }
