--- a/food-delivery/src/components/Menu/MealDetails/MealDetails.scss
+++ b/food-delivery/src/components/Menu/MealDetails/MealDetails.scss
@@ -1,1 +1,98 @@
 @import "../../../sass/main.scss";
+
+.meal-details-container {
+  @include flexCenter(row);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  z-index: 1;
+
+  .meal-details {
+    @include flexCenter(column);
+    justify-self: flex-start;
+    align-items: flex-start;
+    width: 40%;
+    max-width: 600px;
+    background-color: $secondaryColor;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    gap: 10px;
+    margin: 0 auto;
+    padding: 40px 50px;
+
+    .close-details-button {
+      width: 25px;
+      height: 25px;
+      align-self: flex-end;
+      background-color: white;
+      border: none;
+      border-radius: 25px;
+      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+      cursor: pointer;
+      font-size: 0.75rem;
+      font-weight: bold;
+      text-transform: uppercase;
+
+      &:hover {
+        background-color: $titleColor;
+        color: white;
+      }
+    }
+
+    h4 {
+      font-size: 1.1rem;
+      text-transform: uppercase;
+      color: $titleColor;
+    }
+
+    .meal-details-description {
+      width: 100%;
+      margin-bottom: 30px;
+      border-bottom: 1px solid rgb(197, 197, 197);
+      padding-bottom: 30px;
+    }
+
+    .toppings-title {
+      font-weight: bold;
+    }
+
+    form {
+      @include flexCenter(row);
+
+      input {
+        height: 15px;
+        margin-right: 5px;
+        box-shadow: none;
+      }
+    }
+
+    .confirm-details-button {
+      align-self: flex-end;
+      background-color: $titleColor;
+      border: none;
+      border-radius: 25px;
+      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+      color: white;
+      cursor: pointer;
+      font-size: 0.9rem;
+      font-weight: bold;
+      margin-top: 50px;
+      padding: 10px 20px;
+      text-transform: uppercase;
+
+      &:hover {
+        background-color: white;
+        color: black;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .meal-details {
+    width: 85% !important;
+  }
+}
