--- a/food-delivery/src/components/Menu/MealsMenu.scss
+++ b/food-delivery/src/components/Menu/MealsMenu.scss
@@ -3,8 +3,10 @@
 @import "../../sass/main.scss";
 
 .meals-menu {
-  width: 80vw;
+  width: 100%;
   margin: 0 auto;
+  padding: 0 10%;
+  position: relative;
 
   .meals-menu-header {
     @include flexCenter(row);
@@ -24,7 +26,7 @@
 }
 
 h2 {
-  padding: 50px;
+  padding: 45px;
   font-family: "Bebas Neue", cursive;
   text-transform: uppercase;
   font-weight: 900;
@@ -46,7 +48,7 @@ h2 {
     @include flexCenter(column !important);
 
     h2 {
-      padding: 50px 50px 20px 50px;
+      padding: 25px;
     }
 
     .search-container {
