--- a/food-delivery/src/components/Cart/Cart.scss
+++ b/food-delivery/src/components/Cart/Cart.scss
@@ -1,1 +1,21 @@
 @import "../../sass/main.scss";
+
+.cart-container {
+  @include flexCenter(row);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  z-index: 1;
+
+  .cart {
+    width: 50%;
+    max-width: 600px;
+    background-color: $secondaryColor;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    margin: 0 auto;
+  }
+}
