--- a/food-delivery/src/components/Header/CartButton.scss
+++ b/food-delivery/src/components/Header/CartButton.scss
@@ -11,6 +11,7 @@
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.3);
   font-weight: bold;
   padding: 1rem;
+  transition: all 0.2s ease-in-out;
 
   &:hover {
     background-color: $primaryColor;
@@ -31,5 +32,6 @@
     font-weight: bold;
     margin-left: 0.75rem;
     padding: 0.15rem 0.5rem;
+    transition: all 0.2s ease-in-out;
   }
 }
