--- a/food-delivery/src/components/Menu/MealDetails/MealDetails.scss
+++ b/food-delivery/src/components/Menu/MealDetails/MealDetails.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+
 @import "../../../sass/main.scss";
 
 .meal-details-container {
@@ -11,81 +13,111 @@
   z-index: 1;
 
   .meal-details {
-    @include flexCenter(column);
-    justify-self: flex-start;
-    align-items: flex-start;
-    width: 40%;
+    width: 50%;
     max-width: 600px;
     background-color: $secondaryColor;
     border-radius: 10px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-    gap: 10px;
     margin: 0 auto;
-    padding: 40px 50px;
+    overflow: hidden;
 
-    .close-details-button {
-      width: 25px;
-      height: 25px;
-      align-self: flex-end;
-      background-color: white;
-      border: none;
-      border-radius: 25px;
-      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
-      cursor: pointer;
-      font-size: 0.75rem;
-      font-weight: bold;
-      text-transform: uppercase;
-
-      &:hover {
-        background-color: $titleColor;
-        color: white;
-      }
-    }
-
-    h4 {
-      font-size: 1.1rem;
-      text-transform: uppercase;
-      color: $titleColor;
-    }
-
-    .meal-details-description {
+    .meal-details-img-container {
+      position: relative;
       width: 100%;
-      margin-bottom: 30px;
-      border-bottom: 1px solid rgb(197, 197, 197);
-      padding-bottom: 30px;
-    }
 
-    .toppings-title {
-      font-weight: bold;
-    }
+      .close-details-button {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 25px;
+        height: 25px;
+        align-self: flex-end;
+        background-color: white;
+        border: none;
+        border-radius: 25px;
+        box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+        font-size: 0.75rem;
+        font-weight: bold;
+        text-transform: uppercase;
+        margin: 10px;
+        transition: all 0.2s ease-in-out;
 
-    form {
-      @include flexCenter(row);
+        &:hover {
+          background-color: $titleColor;
+          color: white;
+        }
+      }
 
-      input {
-        height: 15px;
-        margin-right: 5px;
-        box-shadow: none;
+      .meal-details-img {
+        width: 100%;
+        height: 225px;
+        object-fit: cover;
+        box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1);
       }
     }
 
-    .confirm-details-button {
-      align-self: flex-end;
-      background-color: $titleColor;
-      border: none;
-      border-radius: 25px;
-      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
-      color: white;
-      cursor: pointer;
-      font-size: 0.9rem;
-      font-weight: bold;
-      margin-top: 50px;
-      padding: 10px 20px;
-      text-transform: uppercase;
+    .meal-details-info {
+      @include flexCenter(column);
+      align-items: flex-start;
+      padding: 30px 50px;
 
-      &:hover {
-        background-color: white;
-        color: black;
+      h4 {
+        color: $titleColor;
+        font-family: "Bebas Neue", cursive;
+        font-size: 1.35rem;
+        letter-spacing: 0.05rem;
+        margin-bottom: 10px;
+        text-transform: uppercase;
+      }
+
+      .meal-details-description {
+        width: 100%;
+        border-bottom: 1px solid rgb(197, 197, 197);
+        margin-bottom: 20px;
+        padding-bottom: 20px;
+      }
+
+      .toppings-title {
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+
+      form {
+        @include flexCenter(column);
+        align-items: flex-start;
+        text-transform: capitalize;
+
+        .meal-extras {
+          @include flexCenter(row);
+        }
+
+        input {
+          height: 15px;
+          margin-right: 5px;
+          box-shadow: none;
+        }
+      }
+
+      .confirm-details-button {
+        align-self: flex-end;
+        background-color: $titleColor;
+        border: none;
+        border-radius: 25px;
+        box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+        color: white;
+        cursor: pointer;
+        font-size: 0.9rem;
+        font-weight: bold;
+        margin-top: 20px;
+        padding: 10px 20px;
+        text-transform: uppercase;
+        transition: all 0.2s ease-in-out;
+
+        &:hover {
+          background-color: white;
+          color: black;
+        }
       }
     }
   }
@@ -94,5 +126,9 @@
 @media screen and (max-width: 900px) {
   .meal-details {
     width: 85% !important;
+
+    .meal-details-img {
+      height: 150px !important;
+    }
   }
 }
