--- a/food-delivery/src/components/Menu/MealList/Meal.scss
+++ b/food-delivery/src/components/Menu/MealList/Meal.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+
 @import "../../../sass/main.scss";
 
 .meal {
@@ -12,7 +14,7 @@
   border-radius: 10px;
   box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.3);
   overflow: hidden;
-  transition: transform 0.3s;
+  transition: transform 0.2s ease-in-out;
 
   &:nth-child(even) {
     flex-direction: row-reverse;
@@ -42,6 +44,9 @@
 
     h3 {
       color: $titleColor;
+      font-size: 1.35rem;
+      font-family: "Bebas Neue", cursive;
+      letter-spacing: 0.05rem;
     }
 
     .meal-description {
