--- a/food-delivery/src/components/Menu/MealList/Meal.scss
+++ b/food-delivery/src/components/Menu/MealList/Meal.scss
@@ -32,6 +32,7 @@
     width: 35%;
     height: 100%;
     object-fit: cover;
+    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.2);
   }
 
   .meal-info {
