--- a/food-delivery/src/components/Cart/Cart.scss
+++ b/food-delivery/src/components/Cart/Cart.scss
@@ -3,7 +3,7 @@
 .cart-container {
   @include flexCenter(row);
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
