--- a/food-delivery/src/components/Cart/Cart.scss
+++ b/food-delivery/src/components/Cart/Cart.scss
@@ -2,20 +2,97 @@
 
 .cart-container {
   @include flexCenter(row);
-  width: 100%;
+  position: fixed;
+  width: 100vw;
   height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
   background-color: rgba(255, 255, 255, 0.9);
   z-index: 1;
 
   .cart {
+    @include flexCenter(column);
+    align-items: flex-start;
+    position: relative;
     width: 50%;
     max-width: 600px;
+    min-width: 250px;
     background-color: $secondaryColor;
     border-radius: 10px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    gap: 30px;
     margin: 0 auto;
+    padding: 30px 50px;
+
+    .close-cart-button {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 25px;
+      height: 25px;
+      background-color: white;
+      border: none;
+      border-radius: 25px;
+      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+      color: black;
+      cursor: pointer;
+      font-size: 0.75rem;
+      font-weight: bold;
+      text-transform: uppercase;
+      margin: 10px;
+      transition: all 0.2s ease-in-out;
+
+      &:hover {
+        background-color: $titleColor;
+        color: white;
+      }
+    }
+
+    h6 {
+      align-self: center;
+      color: $titleColor;
+      font-family: "Bebas Neue", cursive;
+      font-size: 2rem;
+      letter-spacing: 0.05rem;
+      text-transform: uppercase;
+    }
+
+    ul {
+      list-style-type: none;
+      text-transform: capitalize;
+    }
+
+    .total-amount-container {
+      @include flexCenter(column);
+      align-items: flex-start;
+      width: 100%;
+      border-top: 1px solid rgb(197, 197, 197);
+      padding-top: 20px;
+    }
+
+    .confirm-cart-button {
+      align-self: flex-end;
+      background-color: $titleColor;
+      border: none;
+      border-radius: 25px;
+      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+      color: white;
+      cursor: pointer;
+      font-size: 0.9rem;
+      font-weight: bold;
+      margin-top: 20px;
+      padding: 10px 20px;
+      text-transform: uppercase;
+      transition: all 0.2s ease-in-out;
+
+      &:hover {
+        background-color: white;
+        color: black;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .cart {
+    width: 85% !important;
   }
 }
