--- a/food-delivery/src/components/Header/CartButton/CartButton.scss
+++ b/food-delivery/src/components/Header/CartButton/CartButton.scss
@@ -1,14 +1,14 @@
-@import "../../sass/main.scss";
+@import "../../../sass/main.scss";
 
 .cart-button {
   @include flexCenter(row);
   height: 40px;
-  border-radius: 25px;
-  color: black;
-  cursor: pointer;
   background-color: white;
   border: none;
+  border-radius: 25px;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.3);
+  color: black;
+  cursor: pointer;
   font-weight: bold;
   padding: 1rem;
   transition: all 0.2s ease-in-out;
