--- a/food-delivery/src/components/Menu/MealDetails/MealDetails.scss
+++ b/food-delivery/src/components/Menu/MealDetails/MealDetails.scss
@@ -4,21 +4,22 @@
 
 .meal-details-container {
   @include flexCenter(row);
-  width: 100%;
-  height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(255, 255, 255, 0.9);
   z-index: 1;
 
   .meal-details {
     width: 50%;
     max-width: 600px;
+    min-width: 250px;
     background-color: $secondaryColor;
     border-radius: 10px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-    margin: 0 auto;
+    margin: 50px auto 0 auto;
     overflow: hidden;
 
     .meal-details-img-container {
@@ -31,12 +32,11 @@
         right: 0;
         width: 25px;
         height: 25px;
-        align-self: flex-end;
         background-color: white;
         border: none;
         border-radius: 25px;
         box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
-
+        color: black;
         cursor: pointer;
         font-size: 0.75rem;
         font-weight: bold;
@@ -52,9 +52,9 @@
 
       .meal-details-img {
         width: 100%;
-        height: 225px;
-        object-fit: cover;
+        height: 200px;
         box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1);
+        object-fit: cover;
       }
     }
 
@@ -95,8 +95,8 @@
 
         input {
           height: 15px;
-          margin-right: 5px;
           box-shadow: none;
+          margin-right: 5px;
         }
       }
 
