--- a/food-delivery/src/components/Menu/Meal/Meal.scss
+++ b/food-delivery/src/components/Menu/Meal/Meal.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
-@import "../../../../sass/main.scss";
+@import "../../../sass/main.scss";
 
 .meal {
   @include flexCenter(row);
