--- a/food-delivery/src/components/Header/CartButton/CartButton.scss
+++ b/food-delivery/src/components/Header/CartButton/CartButton.scss
@@ -31,7 +31,7 @@
     border-radius: 25px;
     font-weight: bold;
     margin-left: 0.75rem;
-    padding: 0.15rem 0.5rem;
+    padding: 0.2rem 0.7em;
     transition: all 0.2s ease-in-out;
   }
 }
