--- a/food-delivery/src/components/Menu/MealDetails/MealDetails.scss
+++ b/food-delivery/src/components/Menu/MealDetails/MealDetails.scss
@@ -21,6 +21,16 @@
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
     margin: 50px auto 0 auto;
     overflow: hidden;
+    animation: appear 0.1s ease-in;
+
+    @keyframes appear {
+      from {
+        opacity: 0.2;
+      }
+      to {
+        opacity: 1;
+      }
+    }
 
     .meal-details-img-container {
       position: relative;
