--- a/food-delivery/src/components/Header/CartPopup/Cart/Cart.scss
+++ b/food-delivery/src/components/Header/CartPopup/Cart/Cart.scss
@@ -1,139 +1,34 @@
 @import "../../../../sass/main.scss";
 
-.cart-container {
-  @include flexCenter(row);
-  position: fixed;
-  width: 100vw;
-  height: calc(100vh - 70px);
-  bottom: 0;
-  background-color: rgba(255, 255, 255, 0.9);
-  z-index: 1;
+.cart-items {
+  width: 100%;
+  height: fit-content;
+  min-width: 200px;
+  max-height: 320px;
+  overflow-y: auto;
+  background-color: #ececeb;
+  border-radius: 8px;
 
-  .cart {
-    @include flexCenter(column);
-    align-items: flex-start;
-    position: relative;
-    width: 50%;
-    max-width: 600px;
-    min-width: 250px;
-    background-color: $secondaryColor;
-    border-radius: 10px;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-    gap: 30px;
-    margin: 0 auto;
-    padding: 30px 50px;
-    animation: appear 0.2s ease-in;
+  .item {
+    @include flexCenter(row);
+    justify-content: space-between;
+    width: 100%;
+    border-bottom: 1px solid rgb(207, 207, 207);
+    padding: 10px;
 
-    @keyframes appear {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
-    }
-
-    .close-cart-button {
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 25px;
-      height: 25px;
-      background-color: white;
-      border: none;
-      border-radius: 25px;
-      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
-      color: black;
-      cursor: pointer;
-      font-size: 0.75rem;
-      font-weight: bold;
-      text-transform: uppercase;
-      margin: 10px;
-      transition: all 0.2s ease-in-out;
-
-      &:hover {
-        background-color: $titleColor;
-        color: white;
-      }
-    }
-
-    h6 {
-      align-self: center;
-      color: $titleColor;
-      font-family: "Bebas Neue", cursive;
-      font-size: 2rem;
-      letter-spacing: 0.05rem;
-      text-transform: uppercase;
-    }
-
-    .cart-items {
-      width: 100%;
-      height: fit-content;
-      max-height: 300px;
-      overflow-y: auto;
-
-      .meal-cart-item {
-        @include flexCenter(row);
-        justify-content: space-between;
-        width: 100%;
-        margin-bottom: 10px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid rgb(207, 207, 207);
-
-        .meal-cart-info p:first-child {
-          font-weight: 700;
-        }
-
-        .remove-item-button {
-          background-color: $titleColor;
-          border: none;
-          border-radius: 25px;
-          color: white;
-          cursor: pointer;
-          font-size: 0.65rem;
-          padding: 5px 10px;
-          margin-right: 10px;
-          text-transform: uppercase;
-          transition: all 0.2s ease-in-out;
-
-          &:hover {
-            background-color: white;
-            color: black;
-          }
-        }
-      }
-
-      .meal-cart-item:last-child {
-        margin-bottom: 0;
-        border-bottom: none;
-      }
-    }
-
-    ul {
-      list-style-type: none;
-    }
-
-    .total-amount-container {
-      @include flexCenter(column);
-      align-items: flex-start;
-      width: 100%;
-      border-top: 1px solid rgb(116, 116, 116);
-      padding-top: 5px;
+    .info p:first-child {
       font-weight: 700;
     }
 
-    .continue-cart-button {
-      align-self: flex-end;
+    .remove-button {
       background-color: $titleColor;
       border: none;
       border-radius: 25px;
-      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
       color: white;
       cursor: pointer;
-      font-size: 0.9rem;
-      font-weight: bold;
-      margin-top: 20px;
-      padding: 10px 20px;
+      font-size: 0.65rem;
+      padding: 5px 10px;
+      margin-right: 10px;
       text-transform: uppercase;
       transition: all 0.2s ease-in-out;
 
@@ -143,14 +38,48 @@
       }
     }
   }
+
+  .item:last-child {
+    margin-bottom: 0;
+    border-bottom: none;
+  }
+}
+
+ul {
+  list-style-type: none;
+}
+
+.total-amount {
+  @include flexCenter(column);
+  align-items: flex-start;
+  width: 100%;
+  border-top: 1px solid rgb(116, 116, 116);
+  padding-top: 5px;
+  font-weight: 700;
+}
+
+.continue-button {
+  align-self: flex-end;
+  background-color: $titleColor;
+  border: none;
+  border-radius: 25px;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+  color: white;
+  cursor: pointer;
+  font-size: 0.9rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+
+  &:hover {
+    background-color: white;
+    color: black;
+  }
 }
 
 @media screen and (max-width: 900px) {
-  .cart {
-    width: 85% !important;
-
-    .cart-items {
-      max-height: 250px !important;
-    }
+  .cart-items {
+    max-height: 250px !important;
   }
 }
