--- a/food-delivery/src/components/Header/CartPopup/CartPopup.scss
+++ b/food-delivery/src/components/Header/CartPopup/CartPopup.scss
@@ -1,5 +1,13 @@
 @import "../../../sass/main.scss";
 
+.flip {
+  transform: rotateY(180deg);
+
+  .close-button {
+    left: 0;
+  }
+}
+
 .cart-popup-container {
   @include flexCenter(row);
   position: fixed;
@@ -7,6 +15,7 @@
   height: calc(100vh - 70px);
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.9);
+  perspective: 1000px;
   z-index: 1;
 
   ::-webkit-scrollbar {
@@ -26,11 +35,36 @@
     background: rgb(148, 148, 148);
   }
 
+  .close-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 25px;
+    height: 25px;
+    background-color: $titleColor;
+    border: none;
+    border-radius: 25px;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.4);
+    color: white;
+    cursor: pointer;
+    font-size: 0.75rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin: 25px;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+      background-color: $primaryColor;
+      color: black;
+    }
+  }
+
   .cart-popup {
     @include flexCenter(column);
     align-items: flex-start;
     position: relative;
     width: 60%;
+    height: 550px;
     max-width: 550px;
     min-width: 300px;
     animation: appear 0.2s ease-in;
@@ -39,6 +73,8 @@
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
     gap: 25px;
     padding: 30px 50px;
+    transition: transform 1s;
+    transform-style: preserve-3d;
 
     @keyframes appear {
       from {
@@ -49,35 +85,22 @@
       }
     }
 
-    .close-button {
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 25px;
-      height: 25px;
-      background-color: white;
-      border: none;
-      border-radius: 25px;
-      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
-      color: black;
-      cursor: pointer;
-      font-size: 0.75rem;
-      font-weight: bold;
-      text-transform: uppercase;
-      margin: 10px;
-      transition: all 0.2s ease-in-out;
-
-      &:hover {
-        background-color: $titleColor;
-        color: white;
-      }
-    }
-
-    .user-details-container {
+    .cart-section-container {
       @include flexCenter(column);
       align-items: flex-start;
+      justify-content: space-between;
+      position: absolute;
+      left: 0;
       width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
       gap: 30px;
+      overflow: hidden;
+      padding: inherit;
+
+      &:last-child {
+        transform: rotateY(180deg);
+      }
     }
 
     h6 {
