--- a/food-delivery/src/components/Header/CartPopup/UserDetails/UserDetails.scss
+++ b/food-delivery/src/components/Header/CartPopup/UserDetails/UserDetails.scss
@@ -7,33 +7,42 @@
     @include flexCenter(column);
     align-items: flex-start;
     width: 100%;
-    gap: 10px;
-  }
+    gap: 20px;
 
-  label {
-    @include flexCenter(column);
-    align-items: flex-start;
-    gap: 2px;
-  }
+    label {
+      @include flexCenter(column);
+      align-items: flex-start;
+      width: 100%;
+      gap: 2px;
 
-  button {
-    align-self: flex-end;
-    background-color: $titleColor;
-    border: none;
-    border-radius: 25px;
-    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
-    color: white;
-    cursor: pointer;
-    font-size: 0.9rem;
-    font-weight: bold;
-    padding: 10px 20px;
-    text-transform: uppercase;
-    transition: all 0.2s ease-in-out;
-    margin-top: 30px;
+      input {
+        width: 100%;
+        background-color: rgb(252, 252, 252);
+        border: none;
+        border-bottom: 1px solid rgb(150, 150, 150);
+        padding: 5px;
+      }
+    }
 
-    &:hover {
-      background-color: white;
-      color: black;
+    button {
+      align-self: flex-end;
+      background-color: $titleColor;
+      border: none;
+      border-radius: 25px;
+      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+      color: white;
+      cursor: pointer;
+      font-size: 0.9rem;
+      font-weight: bold;
+      padding: 10px 20px;
+      text-transform: uppercase;
+      transition: all 0.2s ease-in-out;
+      margin-top: 30px;
+
+      &:hover {
+        background-color: white;
+        color: black;
+      }
     }
   }
 }
