--- a/food-delivery/src/components/Header/Header.scss
+++ b/food-delivery/src/components/Header/Header.scss
@@ -7,7 +7,7 @@ header {
   position: fixed;
   width: 100%;
   height: 70px;
-  background-color: white;
+  background-color: rgb(250, 250, 250);
   box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.3);
   justify-content: space-between;
   padding: 10px;
