--- a/food-delivery/src/components/Menu/Pagination/Pagination.scss
+++ b/food-delivery/src/components/Menu/Pagination/Pagination.scss
@@ -3,7 +3,7 @@
 .pagination {
   @include flexCenter(row);
   gap: 15px;
-  padding: 50px;
+  padding: 80px 0;
 
   .pagination-item {
     position: relative;
