--- a/food-delivery/src/components/Menu/Search/Search.scss
+++ b/food-delivery/src/components/Menu/Search/Search.scss
@@ -6,11 +6,15 @@
   background-color: $secondaryColor;
   border: none;
   border-radius: 10px;
-  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.3);
   outline: rgb(177, 177, 177);
   padding: 10px 15px;
 
   &:focus {
     background-color: $primaryColor;
+  }
+
+  &::before {
+    content: "a";
   }
 }
