--- a/food-delivery/src/components/Menu/MealsMenu.scss
+++ b/food-delivery/src/components/Menu/MealsMenu.scss
@@ -5,7 +5,7 @@
 .meals-menu {
   width: 100%;
   margin: 0 auto;
-  padding: 0 10%;
+  padding: 25px 10%;
 
   .meals-menu-header {
     @include flexCenter(row);
@@ -15,9 +15,9 @@
 
     h2 {
       font-family: "Bebas Neue", cursive;
-      font-size: 3.25rem;
+      font-size: 3.5rem;
       font-weight: 900;
-      padding: 50px;
+      padding: 35px;
       text-align: center;
       text-transform: uppercase;
       white-space: nowrap;
