--- a/food-delivery/src/components/Menu/Search/Search.scss
+++ b/food-delivery/src/components/Menu/Search/Search.scss
@@ -1,20 +1,7 @@
 @import "../../../sass/main.scss";
 
 .search-input {
-  width: 30vw;
-  max-width: 210px;
-  background-color: $secondaryColor;
+  background-color: transparent;
   border: none;
-  border-radius: 10px;
-  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.3);
-  outline: rgb(177, 177, 177);
-  padding: 10px 15px;
-
-  &:focus {
-    background-color: $primaryColor;
-  }
-
-  &::before {
-    content: "a";
-  }
+  outline: none;
 }
