--- a/food-delivery/src/components/Menu/Search/Search.scss
+++ b/food-delivery/src/components/Menu/Search/Search.scss
@@ -1,6 +1,7 @@
 @import "../../../sass/main.scss";
 
 .search-input {
+  width: 125px;
   background-color: transparent;
   border: none;
   outline: none;
