--- a/food-delivery/src/components/Header/CartPopup/Cart/Cart.scss
+++ b/food-delivery/src/components/Header/CartPopup/Cart/Cart.scss
@@ -77,6 +77,11 @@ ul {
   }
 }
 
+.disabled {
+  pointer-events: none;
+  background-color: grey;
+}
+
 @media screen and (max-width: 900px) {
   .cart-items {
     max-height: 250px !important;
