--- a/food-delivery/src/components/Header/CartPopup/UserDetails/UserDetails.scss
+++ b/food-delivery/src/components/Header/CartPopup/UserDetails/UserDetails.scss
@@ -1,14 +1,5 @@
 @import "../../../../sass/main.scss";
 
-.submitting-message {
-  margin: 0 auto;
-  padding: 20px;
-  font-weight: bold;
-  @include flexCenter(column);
-  gap: 40px;
-  text-align: center;
-}
-
 .user-form {
   width: 100%;
 
@@ -57,4 +48,13 @@
       }
     }
   }
+}
+
+.submitting-message {
+  margin: 0 auto;
+  padding: 30px 0;
+  font-weight: bold;
+  @include flexCenter(column);
+  gap: 50px;
+  text-align: center;
 }
