--- a/food-delivery/src/components/Header/Header.scss
+++ b/food-delivery/src/components/Header/Header.scss
@@ -35,12 +35,19 @@ header {
 
 .hero {
   width: 100%;
-  height: 70vh;
+  height: 75vh;
+  padding-top: 70px;
 
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: 50% 40%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .hero {
+    height: 55vh;
   }
 }
