--- a/food-delivery/src/components/Header/Header.scss
+++ b/food-delivery/src/components/Header/Header.scss
@@ -18,15 +18,14 @@ header {
     height: 100%;
 
     .logo {
-      width: 50px;
-      height: 50px;
+      width: 40px;
       margin-right: 10px;
     }
 
     h1 {
       font-family: "Bebas Neue", cursive;
-      font-size: 2.25rem;
-      font-weight: 900;
+      font-size: 2.5rem;
+      margin-top: 5px;
       text-transform: uppercase;
       white-space: nowrap;
     }
@@ -42,7 +41,6 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: 50% 40%;
   }
 }
 
