--- a/food-delivery/src/components/Menu/MealDetails/MealDetails.scss
+++ b/food-delivery/src/components/Menu/MealDetails/MealDetails.scss
@@ -13,7 +13,7 @@
   z-index: 1;
 
   .meal-details {
-    width: 50%;
+    width: 85%;
     max-width: 600px;
     min-width: 250px;
     background-color: $secondaryColor;
@@ -52,7 +52,7 @@
         font-weight: bold;
         text-transform: uppercase;
         margin: 10px;
-        transition: all 0.2s ease-in-out;
+        transition: all 0.3s ease-in-out;
 
         &:hover {
           background-color: $titleColor;
@@ -62,25 +62,24 @@
 
       .meal-details-img {
         width: 100%;
-        height: 200px;
+        height: 170px;
         box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1);
         object-fit: cover;
       }
     }
 
+    .addthis_inline_share_toolbox {
+      opacity: 0.9;
+      display: flex;
+      padding: 10px 10px 0 0;
+      justify-content: flex-end;
+    }
+
     .meal-details-info {
       @include flexCenter(column);
       align-items: flex-start;
-      padding: 30px 50px;
+      padding: 0px 50px 30px 50px;
       position: relative;
-
-      .addthis_inline_share_toolbox {
-        position: absolute;
-        top: 0;
-        right: 0;
-        padding: 10px;
-        opacity: 0.9;
-      }
 
       h4 {
         color: $titleColor;
@@ -132,23 +131,13 @@
         margin-top: 20px;
         padding: 10px 20px;
         text-transform: uppercase;
-        transition: all 0.2s ease-in-out;
+        transition: all 0.3s ease-in-out;
 
         &:hover {
           background-color: white;
           color: black;
         }
       }
-    }
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .meal-details {
-    width: 85% !important;
-
-    .meal-details-img {
-      height: 150px !important;
     }
   }
 }
